# whatintime

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: build_and_publish.yaml  pytest.yaml
tests/: test_all.py
whatintime/: __init__.py
